# yaml-patch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: pr.yml  release.yml  test.yml
tests/: test_cli.py  test_patch.py
yaml_patch/: __init__.py  cli.py  patch.py
